add some data and env

--- a/data-mining.ipynb
+++ b/data-mining.ipynb
@@ -57,7 +57,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
+   "id": "4128ad29",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "import matplotlib.pyplot as plt\n",
+    "from sklearn.model_selection import train_test_split"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
    "id": "926f762f",
    "metadata": {},
    "outputs": [],
@@ -174,6 +187,153 @@
    ],
    "source": [
     "skincare.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "86e17410",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>product_name</th>\n",
+       "      <th>product_url</th>\n",
+       "      <th>product_type</th>\n",
+       "      <th>clean_ingreds</th>\n",
+       "      <th>price</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>count</th>\n",
+       "      <td>1138</td>\n",
+       "      <td>1138</td>\n",
+       "      <td>1138</td>\n",
+       "      <td>1138</td>\n",
+       "      <td>1138</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>unique</th>\n",
+       "      <td>1138</td>\n",
+       "      <td>1126</td>\n",
+       "      <td>14</td>\n",
+       "      <td>1071</td>\n",
+       "      <td>290</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>top</th>\n",
+       "      <td>The Ordinary Natural Moisturising Factors + HA...</td>\n",
+       "      <td>https://www.lookfantastic.com/lancome-advanced...</td>\n",
+       "      <td>Mask</td>\n",
+       "      <td>['magnesium sulfate']</td>\n",
+       "      <td>£22.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>freq</th>\n",
+       "      <td>1</td>\n",
+       "      <td>4</td>\n",
+       "      <td>124</td>\n",
+       "      <td>5</td>\n",
+       "      <td>33</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                             product_name  \\\n",
+       "count                                                1138   \n",
+       "unique                                               1138   \n",
+       "top     The Ordinary Natural Moisturising Factors + HA...   \n",
+       "freq                                                    1   \n",
+       "\n",
+       "                                              product_url product_type  \\\n",
+       "count                                                1138         1138   \n",
+       "unique                                               1126           14   \n",
+       "top     https://www.lookfantastic.com/lancome-advanced...         Mask   \n",
+       "freq                                                    4          124   \n",
+       "\n",
+       "                clean_ingreds   price  \n",
+       "count                    1138    1138  \n",
+       "unique                   1071     290  \n",
+       "top     ['magnesium sulfate']  £22.00  \n",
+       "freq                        5      33  "
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "skincare.describe()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "acec0521",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "product_name     0\n",
+       "product_url      0\n",
+       "product_type     0\n",
+       "clean_ingreds    0\n",
+       "price            0\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "skincare.isnull().sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "e203cdc5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "skincare.duplicated().sum()\n",
+    "skincare.drop_duplicates(inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "77d2ea1f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "skincare = pd.get_dummies(skincare, columns=)"
    ]
   }
  ],
